@@ -161,7 +161,7 @@ NOTE: Use the "system-sensors" command to see what sensors are available for mon
 <p>This module toggles the system's screensaver while the Phoronix Test Suite is running. At this time, the GNOME and KDE screensavers are supported.</p>
 <p>This module utilizes the following environmental variables: HALT_SCREENSAVER.</p>
 <h2>Update Checker</h2>
-<p>This module checks to see if the Phoronix Test Suite -- and its tests and suites -- are up to date.</p>
+<p>This module checks to see if the Phoronix Test Suite -- and its tests and suites -- are up to date plus also handles message of the day information.</p>
 <h2>Utilize Wine On Linux Benchmarking</h2>
 <p>This module when activated via the USE_WINE environment variable on Linux systems will override the test profile OS target to Windows and attempt to run the (Windows) tests under Wine, if installed on the system. USE_WINE can be either set to the name of the desired wine command or the absolute path to the wine binary you wish to use for benchmarking.</p>
 <p>This module utilizes the following environmental variables: USE_WINE.</p>
