@@ -1,6 +1,7 @@
 PHORONIX TEST SUITE CHANGE-LOG
 
-Phoronix Test Suite (Git)
+Phoronix Test Suite 9.6.0 Milestone 2
+5 April 2020
 
 pts-core: Documentation updates
 pts-core: External dependency updates
